@@ -37,6 +37,8 @@ libexec_PROGRAMS = synce-serial-chat
 
 synce_serial_chat_SOURCES = synce-serial-chat.c
 
+EXTRA_DIST = synce-device-signals-marshal.list \
+		synce-device.xml
 
 %-glue.h: %.xml
 	dbus-binding-tool --mode=glib-server --output=$@ --prefix=$(subst -,_,$*) $<
